<resources>
    <string name="app_name">Attendance</string>
    <string name="edit_text_1">Username</string>
    <string name="edit_text_2">Password</string>
    <string name="button_1"> Log in</string>
    <string name="button_2">Register</string>
    <string name="text_view">Forgot your password?</string>
    <string name="submit">submit</string>
    <string name="attended">Attended</string>
    <string name="code">Code :</string>
    <string name="faculty">Faculty:</string>
    <string name="missed">Missed</string>
    <string name="total">Total :</string>
    <string name="usn">Usn</string>
    <string name="subject_code">Subject Code</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="attendance">Attendance</string>
    <string name="admin_name">Admin Name</string>
    <string name="register">Register</string>
    <string name="spl_password">Spl Password</string>
    <string name="enter_the_required_details"><![CDATA[Enter The Required Details >>>]]></string>
    <string name="log_out">Log Out</string>
    <string name="manage_faculty">Manage Faculty</string>
    <string name="manage_students">Manage Students</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="phone_number">Phone Number</string>
    <string name="student_name">Student Name</string>
    <string name="mayank">mayank</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="view_attendance">View Attendance</string>
    <string name="version">version : 1.1</string>
    <string name="dev">Developed by :</string>
    <string name="devname">Mayank Singh Chaudhary</string>
</resources>
