<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/Sname1"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/student_name"

                >

                <requestFocus></requestFocus>
            </EditText>

            <EditText
                android:id="@+id/USN1"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/usn" />

            <EditText
                android:id="@+id/Code1"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/subject_code" />

            <EditText
                android:id="@+id/Phone1"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <Button
                android:id="@+id/bu1"
                style="@style/button_style1"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="home_start1"
                android:text="@string/add" />

            <Button
                android:id="@+id/home"
                style="@style/button_style1"
                android:layout_width="270dp"

                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_below="@+id/bu1"

                android:clickable="true"
                android:gravity="center"
                android:onClick="Back"
                android:text="@string/back"
                tools:ignore="ObsoleteLayoutParam" />

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="#00000000"
                android:drawSelectorOnTop="false"
                tools:ignore="NestedScrolling"></ListView>
        </LinearLayout>
    </ScrollView>

