<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.example.theoo.attendance.Admin_homeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fac"
            android:layout_weight="3.02"
            android:layout_marginTop="40dp"
            tools:ignore="ContentDescription,InefficientWeight" />

        <EditText
            android:id="@+id/Tname"
            style="@style/editText_style"
            android:hint="@string/faculty_name"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/Password"
            style="@style/editText_style"
            android:hint="@string/edit_text_2"
            android:inputType="textPassword"
            />
        <EditText
            android:id="@+id/Code"
            style="@style/editText_style"
            android:hint="@string/subject_code"

            />
         <Button
            android:id="@+id/bu1"
            style="@style/button_style"
            android:text="@string/register"
             android:onClick="home_start"
             android:clickable="true"/>


    </LinearLayout>
</ScrollView>
