<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context="com.example.theoo.attendance.Admin_homeActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:weightSum="1"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="29dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="29.5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.14"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/logo13"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                style="@style/textView_style"
                android:layout_width="match_parent"
                android:layout_alignStart="@+id/textView2"
                android:layout_below="@+id/imageView2"
                android:layout_marginTop="12dp"
                android:layout_weight="0.14"
                android:text="@string/attendance"
                android:textSize="25sp"
                android:textStyle="italic"
                tools:ignore="ObsoleteLayoutParam" />

            <EditText
                android:id="@+id/Username"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/textView"
                android:layout_marginTop="16dp"
                android:layout_weight="0.14"
                android:hint="@string/subject_code"
                android:inputType="textEmailAddress"
                tools:ignore="ObsoleteLayoutParam" />

            <EditText
                android:id="@+id/Password"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/editText2"
                android:layout_marginTop="13dp"
                android:layout_weight="0.14"
                android:hint="@string/edit_text_2"
                android:inputType="textPassword"
                tools:ignore="ObsoleteLayoutParam" />

            <Button
                android:id="@+id/sin"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_below="@+id/editText3"
                android:layout_marginTop="14dp"
                android:layout_weight="0.14"
                android:text="@string/button_1"
                android:onClick="home"
                android:clickable="true"
                tools:ignore="ObsoleteLayoutParam" />

            <Button
                android:id="@+id/reg"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_below="@+id/button"
                android:layout_marginTop="20dp"
                android:layout_weight="0.14"
                android:text="@string/button_2"
                android:onClick="register"
                android:clickable="true"
                tools:ignore="ObsoleteLayoutParam" />



        </LinearLayout>
    </ScrollView>

</RelativeLayout>
