<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="172dp"
                android:layout_y="182dp"
                android:clickable="true"
                android:onClick="onClick"
                android:src="@drawable/logo13"
                tools:ignore="ContentDescription,ObsoleteLayoutParam" />
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:gravity="center"
                 android:layout_below="@id/imageView"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev"
                android:gravity="center"
                android:layout_marginTop="260dp"
                android:layout_below="@id/textView6"
                />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/devname"
                android:gravity="center"
                android:layout_below="@id/textView7"/>

        </RelativeLayout>

    </ScrollView>




</RelativeLayout>